// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach appsecret_proof if appSecret is given 1`] = `
Object {
  "access_token": "access_token_foo",
  "appsecret_proof": "ca75a42e982f92428eb9b338ec73939888812d4da57ca9b7844a9d7d486f1ddc",
  "batch": "[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_foo\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22john%22%7D&id=1\\",\\"name\\":\\"facebook.id.foo.john-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"some/api?access_token=access_token_foo\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22john%22%7D&id=2\\",\\"depends_on\\":\\"facebook.id.foo.john-1\\",\\"name\\":\\"facebook.id.foo.john-2\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_bar\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22jane%22%7D&id=3\\",\\"name\\":\\"facebook.id.bar.jane-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"another/api?access_token=access_token_baz\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22jojo%22%7D&id=4\\",\\"name\\":\\"facebook.id.baz.jojo-1\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`call to graph api 1`] = `
Object {
  "access_token": "access_token_foo",
  "batch": "[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_foo\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22john%22%7D&id=1\\",\\"name\\":\\"facebook.id.foo.john-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"some/api?access_token=access_token_foo\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22john%22%7D&id=2\\",\\"depends_on\\":\\"facebook.id.foo.john-1\\",\\"name\\":\\"facebook.id.foo.john-2\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_bar\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22jane%22%7D&id=3\\",\\"name\\":\\"facebook.id.bar.jane-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"another/api?access_token=access_token_baz\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22jojo%22%7D&id=4\\",\\"name\\":\\"facebook.id.baz.jojo-1\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`fail if one single job fail 1`] = `
Object {
  "batch": Array [
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "platform": "test",
          "uid": "foo",
        },
        "key": "facebook.id.foo.john",
        "request": Object {
          "method": "POST",
          "params": Object {
            "id": 1,
            "recipient": Object {
              "id": "john",
            },
          },
          "url": "me/messages",
        },
      },
      "result": Object {
        "body": Object {
          "message_id": "xxx",
          "recipient_id": "xxx",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": [GraphAPIError (OAuthException): you should not passed!],
      "job": Object {
        "channel": Object {
          "platform": "test",
          "uid": "foo",
        },
        "key": "facebook.id.foo.john",
        "request": Object {
          "method": "POST",
          "params": Object {
            "id": 2,
            "recipient": Object {
              "id": "john",
            },
          },
          "url": "some/api",
        },
      },
      "result": Object {
        "body": Object {
          "error": Object {
            "code": 999,
            "fbtrace_id": "DuNgzaHdmcb",
            "message": "you should not passed!",
            "type": "OAuthException",
          },
        },
        "code": 400,
      },
      "success": false,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "platform": "test",
          "uid": "bar",
        },
        "key": "facebook.id.bar.jane",
        "request": Object {
          "method": "POST",
          "params": Object {
            "id": 3,
            "recipient": Object {
              "id": "jane",
            },
          },
          "url": "me/messages",
        },
      },
      "result": Object {
        "body": Object {
          "message_id": "xxx",
          "recipient_id": "xxx",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "platform": "test",
          "uid": "baz",
        },
        "key": "facebook.id.baz.jojo",
        "request": Object {
          "method": "POST",
          "params": Object {
            "id": 4,
            "recipient": Object {
              "id": "jojo",
            },
          },
          "url": "another/api",
        },
      },
      "result": Object {
        "body": Object {
          "message_id": "xxx",
          "recipient_id": "xxx",
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": Array [
    [GraphAPIError (OAuthException): you should not passed!],
  ],
  "success": false,
}
`;

exports[`multiple access tokens skip job when no access token available 2`] = `
Object {
  "access_token": "access_token_foo",
  "batch": "[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_foo\\",\\"body\\":\\"id=1\\",\\"name\\":\\"facebook:id:foo-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_baz\\",\\"body\\":\\"id=4\\",\\"name\\":\\"facebook:id:baz-1\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`multiple access tokens use access token for each channels 1`] = `
Object {
  "access_token": "access_token_foo",
  "batch": "[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_foo\\",\\"body\\":\\"id=1\\",\\"name\\":\\"facebook:id:foo-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_bar\\",\\"body\\":\\"id=2\\",\\"name\\":\\"facebook:id:bar-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"bar/baz?access_token=access_token_bar\\",\\"body\\":\\"id=3\\",\\"depends_on\\":\\"facebook:id:bar-1\\",\\"name\\":\\"facebook:id:bar-2\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_baz\\",\\"body\\":\\"id=4\\",\\"name\\":\\"facebook:id:baz-1\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`upload files with form data if binary attached on job 1`] = `
"-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"file_0\\"

_file0_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"file_1\\"; filename=\\"YouDontSay.jpg\\"
Content-Type: image/jpeg

_file1_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"file_2\\"; filename=\\"Cage.gif\\"
Content-Type: image/gif

_file2_
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"access_token\\"

access_token_foo
-----MULTIPART_SEPARATOR-----
Content-Disposition: form-data; name=\\"batch\\"

[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_foo\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22john%22%7D&id=1\\",\\"name\\":\\"facebook.id.foo.john-1\\",\\"attached_files\\":\\"file_0\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"some/api?access_token=access_token_foo\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22john%22%7D&id=2\\",\\"depends_on\\":\\"facebook.id.foo.john-1\\",\\"name\\":\\"facebook.id.foo.john-2\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"me/messages?access_token=access_token_bar\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22jane%22%7D&id=3\\",\\"name\\":\\"facebook.id.bar.jane-1\\",\\"attached_files\\":\\"file_1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"another/api?access_token=access_token_baz\\",\\"body\\":\\"recipient=%7B%22id%22%3A%22jojo%22%7D&id=4\\",\\"name\\":\\"facebook.id.baz.jojo-1\\",\\"attached_files\\":\\"file_2\\",\\"omit_response_on_success\\":false}]
-----MULTIPART_SEPARATOR-------
"
`;

exports[`use querystring params for DELETE request 1`] = `
Object {
  "access_token": "access_token_foo",
  "batch": "[{\\"method\\":\\"DELETE\\",\\"relative_url\\":\\"me/messenger_profile?fields=%5B%22whitelisted_domains%22%5D&access_token=access_token_foo\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`use querystring params for GET request 1`] = `
Object {
  "access_token": "access_token_foo",
  "batch": "[{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?fields=%5B%22id%22%2C%22name%22%2C%22email%22%5D&access_token=access_token_foo\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`using API result in following request registerResult & consumeResult in different batches 1`] = `
Object {
  "batch": Array [
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "request": Object {
          "method": "GET",
          "url": "1234567890",
        },
      },
      "result": Object {
        "body": Object {
          "result": "ok",
        },
        "code": 200,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "key": "foo_thread",
        "registerResult": "image_1",
        "request": Object {
          "method": "POST",
          "params": Object {
            "file": "@/pretend/to/upload/a/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": Object {
        "body": Object {
          "id": "1111111111",
        },
        "code": 201,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "key": "foo_thread",
        "registerResult": "image_2",
        "request": Object {
          "method": "POST",
          "params": Object {
            "file": "@/pretend/to/upload/b/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": Object {
        "body": Object {
          "id": "2222222222",
        },
        "code": 201,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "consumeResult": Object {
          "accomplishRequest": [MockFunction moxy] {
            "calls": Array [
              Array [
                Object {
                  "method": "POST",
                  "params": Object {
                    "images": Array [],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
                Array [
                  "image_1",
                  "image_2",
                ],
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Object {
                  "method": "POST",
                  "params": Object {
                    "images": Array [
                      Object {
                        "id": "1111111111",
                      },
                      Object {
                        "id": "{result=foo_thread-1:$.id}",
                      },
                    ],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
              },
            ],
          },
          "keys": Array [
            "image_1",
            "image_2",
          ],
        },
        "key": "foo_thread",
        "request": Object {
          "method": "POST",
          "params": Object {
            "images": Array [],
            "to": "9876543210",
            "type": "image",
          },
          "url": "1234567890/messages",
        },
      },
      "result": Object {
        "body": Object {
          "messages": Array [
            Object {
              "id": "123",
            },
          ],
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;

exports[`using API result in following request registerResult & consumeResult in different batches 2`] = `
Object {
  "access_token": "access_token_foo",
  "batch": "[{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"GET\\",\\"relative_url\\":\\"1234567890?access_token=access_token_foo\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"1234567890/media?access_token=access_token_foo\\",\\"body\\":\\"type=image%2Fjpeg&file=%40%2Fpretend%2Fto%2Fupload%2Fa%2Ffile.jpg\\",\\"name\\":\\"foo_thread-1\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`using API result in following request registerResult & consumeResult in different batches 3`] = `
Object {
  "access_token": "access_token_foo",
  "batch": "[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"1234567890/media?access_token=access_token_foo\\",\\"body\\":\\"type=image%2Fjpeg&file=%40%2Fpretend%2Fto%2Fupload%2Fb%2Ffile.jpg\\",\\"name\\":\\"foo_thread-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"1234567890/messages?access_token=access_token_foo\\",\\"body\\":\\"to=9876543210&type=image&images=%5B%7B%22id%22%3A%221111111111%22%7D%2C%7B%22id%22%3A%22%7Bresult%3Dfoo_thread-1%3A%24.id%7D%22%7D%5D\\",\\"depends_on\\":\\"foo_thread-1\\",\\"name\\":\\"foo_thread-2\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`using API result in following request registerResult & consumeResult in the same batch 1`] = `
Object {
  "batch": Array [
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "key": "foo_thread",
        "registerResult": "image_1",
        "request": Object {
          "method": "POST",
          "params": Object {
            "file": "@/pretend/to/upload/a/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": Object {
        "body": Object {
          "id": "1111111111",
        },
        "code": 201,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "key": "foo_thread",
        "registerResult": "image_2",
        "request": Object {
          "method": "POST",
          "params": Object {
            "file": "@/pretend/to/upload/b/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": Object {
        "body": Object {
          "id": "2222222222",
        },
        "code": 201,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "consumeResult": Object {
          "accomplishRequest": [MockFunction moxy] {
            "calls": Array [
              Array [
                Object {
                  "method": "POST",
                  "params": Object {
                    "images": Array [],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
                Array [
                  "image_1",
                  "image_2",
                ],
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Object {
                  "method": "POST",
                  "params": Object {
                    "images": Array [
                      Object {
                        "id": "{result=foo_thread-1:$.id}",
                      },
                      Object {
                        "id": "{result=foo_thread-2:$.id}",
                      },
                    ],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
              },
            ],
          },
          "keys": Array [
            "image_1",
            "image_2",
          ],
        },
        "key": "foo_thread",
        "request": Object {
          "method": "POST",
          "params": Object {
            "images": Array [],
            "to": "9876543210",
            "type": "image",
          },
          "url": "1234567890/messages",
        },
      },
      "result": Object {
        "body": Object {
          "messages": Array [
            Object {
              "id": "123",
            },
          ],
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;

exports[`using API result in following request registerResult & consumeResult in the same batch 2`] = `
Object {
  "access_token": "access_token_foo",
  "batch": "[{\\"method\\":\\"POST\\",\\"relative_url\\":\\"1234567890/media?access_token=access_token_foo\\",\\"body\\":\\"type=image%2Fjpeg&file=%40%2Fpretend%2Fto%2Fupload%2Fa%2Ffile.jpg\\",\\"name\\":\\"foo_thread-1\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"1234567890/media?access_token=access_token_foo\\",\\"body\\":\\"type=image%2Fjpeg&file=%40%2Fpretend%2Fto%2Fupload%2Fb%2Ffile.jpg\\",\\"depends_on\\":\\"foo_thread-1\\",\\"name\\":\\"foo_thread-2\\",\\"omit_response_on_success\\":false},{\\"method\\":\\"POST\\",\\"relative_url\\":\\"1234567890/messages?access_token=access_token_foo\\",\\"body\\":\\"to=9876543210&type=image&images=%5B%7B%22id%22%3A%22%7Bresult%3Dfoo_thread-1%3A%24.id%7D%22%7D%2C%7B%22id%22%3A%22%7Bresult%3Dfoo_thread-2%3A%24.id%7D%22%7D%5D\\",\\"depends_on\\":\\"foo_thread-2\\",\\"name\\":\\"foo_thread-3\\",\\"omit_response_on_success\\":false}]",
}
`;

exports[`using API result in following request when job key is undeinfed 1`] = `
Object {
  "batch": Array [
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "key": undefined,
        "registerResult": "image_1",
        "request": Object {
          "method": "POST",
          "params": Object {
            "file": "@/pretend/to/upload/a/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": Object {
        "body": Object {
          "id": "1111111111",
        },
        "code": 201,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "key": undefined,
        "registerResult": "image_2",
        "request": Object {
          "method": "POST",
          "params": Object {
            "file": "@/pretend/to/upload/b/file.jpg",
            "type": "image/jpeg",
          },
          "url": "1234567890/media",
        },
      },
      "result": Object {
        "body": Object {
          "id": "2222222222",
        },
        "code": 201,
      },
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "channel": Object {
          "uid": "foo",
        },
        "consumeResult": Object {
          "accomplishRequest": [MockFunction moxy] {
            "calls": Array [
              Array [
                Object {
                  "method": "POST",
                  "params": Object {
                    "images": Array [],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
                Array [
                  "image_1",
                  "image_2",
                ],
                [Function],
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": Object {
                  "method": "POST",
                  "params": Object {
                    "images": Array [
                      Object {
                        "id": "{result=#request-0:$.id}",
                      },
                      Object {
                        "id": "{result=#request-1:$.id}",
                      },
                    ],
                    "to": "9876543210",
                    "type": "image",
                  },
                  "url": "1234567890/messages",
                },
              },
            ],
          },
          "keys": Array [
            "image_1",
            "image_2",
          ],
        },
        "key": undefined,
        "request": Object {
          "method": "POST",
          "params": Object {
            "images": Array [],
            "to": "9876543210",
            "type": "image",
          },
          "url": "1234567890/messages",
        },
      },
      "result": Object {
        "body": Object {
          "messages": Array [
            Object {
              "id": "123",
            },
          ],
        },
        "code": 200,
      },
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;
